[package]
name = "apex-rust-singularity"
version = "206.5.0"
edition = "2021"

[dependencies]
# Alloy: 2x faster primitives than ethers-rs
alloy = { version = "0.1", features = ["full", "rpc-types-eth"] }
# REVM: The literal fastest EVM implementation (used by Foundry/Anvil)
revm = { version = "33", features = ["std", "serde", "memory_db"] }
# Petgraph + Rayon: For 12-hop parallel graph search
petgraph = "0.6"
rayon = "1.8"
# Low-latency synchronization
parking_lot = "0.12"
dashmap = "5.5"
core_affinity = "0.8" 

[profile.release]
opt-level = 3
lto = "fat"
codegen_units = 1
panic = "abort"
